# notification-poc-campain-start-consumer

./: Cargo.toml
src/: connection.rs  db_service.rs  kafka_producer.rs  main.rs  model.rs  producer.rs
